[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.28.0", features = ["full"] }
